# PicManager

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh.md
.claude/: settings.local.json
docs/: ARCHITECTURE.md  DESIGN.md  FRONTEND.md  GARMIN_SYNC.md  GEO_CODING.md  HEIC_ORIENTATION.md  MANUAL.md  MANUAL.zh.md  PERFORMANCE.md  PHOTOKIT_RESEARCH.md  PLAN.md  REQUIREMENTS.md
frontend/: app.js  index.html  style.css
migrations/: 0001_initial.sql  0002_geocache.sql  0003_faces.sql  0004_photo_stats.sql  0005_dedup_incremental.sql  0006_timezone_offset.sql  0007_people.sql  0008_geocache_hierarchy.sql  0009_animals.sql  0010_people_status.sql  0011_rotation.sql  0012_exif_orientation.sql  0013_fix_self_ref_parent.sql  0014_photo_dims.sql  0015_geocache_normalize.sql  0016_geocache_normalize2.sql  0017_activities.sql  0018_activity_sensors.sql
photobridge/: .gitignore  Package.resolved  Package.swift
photobridge/.build/: plugin-tools.yaml
photobridge/Sources/PhotoBridge/: Info.plist  PhotoBridge.entitlements  PhotoBridgeCommand.swift
photobridge/Sources/PhotoBridgeLib/: AssetEnumerator.swift  AssetExporter.swift  AssetTimestamp.swift  DiskSpaceCheck.swift  IncrementalEnumerator.swift  LibraryEnumerator.swift  PathUtils.swift  PhotoBridgeLib.swift  PhotoLibraryAuth.swift  PicManagerRunner.swift  SyncState.swift
photobridge/Tests/PhotoBridgeTestRunner/: AssetExporterTests.swift  AssetFilterTests.swift  AssetTimestampTests.swift  AuthTests.swift  DiskSpaceCheckTests.swift  FixTimestampsTests.swift  IncrementalEnumeratorTests.swift  PicManagerRunnerTests.swift  SyncStateTests.swift  TestHelpers.swift  TestRunner.swift  main.swift
src/: config.rs  error.rs  image_open.rs  lib.rs  main.rs
src/activities/: importer.rs  mod.rs  parser.rs  rdp.rs
src/album/: location.rs  merge.rs  mod.rs  organize.rs
src/animal/: detector.rs  mod.rs
src/dedup/: candidate.rs  hash.rs  mod.rs
src/face/: cluster.rs  detector.rs  embedder.rs  job.rs  mod.rs  pca.rs
src/importer/: log.rs  mod.rs  placer.rs  scanner.rs  state.rs
src/metadata/: exif.rs  filename.rs  format.rs  mod.rs  types.rs
src/storage/: db.rs  mod.rs
src/web/: embed.rs  mod.rs
src/web/handlers/: activities.rs  albums.rs  animals.rs  collections.rs  dedup.rs  faces.rs  geo.rs  import.rs  (+3 more)
tests/: make_fixtures.py  web_api.rs
tests/samples/: IMG_9886.HEIC
(+498 files in other folders)
