[package]
name = "picmanager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "picmanager"
path = "src/main.rs"

[lib]
name = "picmanager"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
kamadak-exif = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
image_hasher = "3"

[dev-dependencies]
tempfile = "3"
tower = "0.5"

[profile.test]
opt-level = 2

[dependencies.anyhow]
version = "1"
